refactor: fixing the ACL for the proxy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,9 @@
         "Hostnames",
         "kconvert",
         "KEYPAIR",
+        "localnet",
+        "ncat",
+        "nmap",
         "nosql",
         "OLDPWD",
         "onboarded",
@@ -26,6 +29,7 @@
         "prepopulate",
         "Redrive",
         "RFID",
+        "setuptools",
         "Tierings",
         "traceback",
         "zcat",
