refactor: fixing the ACL for the proxy

--- a/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
@@ -289,8 +289,8 @@ Resources:
               #!/bin/bash
               yum install -y squid telnet bind-utils nmap-ncat nmap mc python3 python3-pip python3-setuptools git curl vim
 
-              sed -i '0,/RFC1918 possible internal network/ s/RFC1918 possible internal network/&\nacl localnet src ${PrivateVpcCidr}/g' squid.conf
-              sed -i '0,/RFC1918 possible internal network/ s/RFC1918 possible internal network/&\nacl localnet src ${PublicVpcCidr}/g' squid.conf
+              sed -i '0,/RFC1918 possible internal network/ s/RFC1918 possible internal network/&\nacl localnet src ${PrivateVpcCidr}/g' /etc/squid/squid.conf
+              sed -i '0,/RFC1918 possible internal network/ s/RFC1918 possible internal network/&\nacl localnet src ${PublicVpcCidr}/g' /etc/squid/squid.conf
 
               systemctl enable squid.service
               systemctl start squid
