refactor: fixing the ACL for the proxy

--- a/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
@@ -297,9 +297,9 @@ Resources:
 
               --==BOUNDARY==--
             - PrivateVpcCidr: 
-                Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcId"
+                Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcCidrBlock"
               PublicVpcCidr: 
-                Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"
+                Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcCidrBlock"
       TagSpecifications: 
       - ResourceType: "launch-template"
         Tags: 
