--- a/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
@@ -289,8 +289,18 @@ Resources:
               #!/bin/bash
               yum install -y squid telnet bind-utils nmap-ncat nmap mc python3 python3-pip python3-setuptools git curl vim
 
-              sed -i '0,/RFC1918 possible internal network/ s/RFC1918 possible internal network/&\nacl localnet src ${PrivateVpcCidr}/g' /etc/squid/squid.conf
-              sed -i '0,/RFC1918 possible internal network/ s/RFC1918 possible internal network/&\nacl localnet src ${PublicVpcCidr}/g' /etc/squid/squid.conf
+              ip1="${PrivateVpcCidr}"
+              ip2="${PublicVpcCidr}"
+              ip1f=`echo $ip1 | awk -F\/ '{print $1}'`
+              ip1fb=`echo $ip1 | awk -F\/ '{print $2}'`
+              ip2f=`echo $ip2 | awk -F\/ '{print $1}'`
+              ip2fb=`echo $ip2 | awk -F\/ '{print $2}'`
+              sed -i '0,/RFC1918 possible internal network/ s/RFC1918 possible internal network/&\nacl localnet src XXX\/YYY/g' /etc/squid/squid.conf 
+              sed -i -r "s/XXX/$ip1f/g" /etc/squid/squid.conf 
+              sed -i -r "s/YYY/$ip1fb/g" /etc/squid/squid.conf 
+              sed -i '0,/RFC1918 possible internal network/ s/RFC1918 possible internal network/&\nacl localnet src XXX\/YYY/g' /etc/squid/squid.conf 
+              sed -i -r "s/XXX/$ip2f/g" /etc/squid/squid.conf 
+              sed -i -r "s/YYY/$ip2fb/g" /etc/squid/squid.conf 
 
               systemctl enable squid.service
               systemctl start squid
