refactor: adjusting instance type

--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -201,7 +201,7 @@ Resources:
         IamInstanceProfile:
           Arn: !GetAtt GitHubSyncServerInstanceIamProfile.Arn
         ImageId: !Ref GitHubSyncServerEc2AmiParam
-        InstanceType: t3.large
+        InstanceType: t3.medium
         SecurityGroupIds:
         - !Ref GitHubSyncServerSecurityGroup
         MetadataOptions:
