--- a/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
@@ -320,16 +320,7 @@ Resources:
   ProxyServerElbv2TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties: 
-      HealthCheckEnabled: true
-      HealthCheckIntervalSeconds: 30
-      HealthCheckPath: "/"
-      HealthCheckPort: 3128
-      HealthCheckProtocol: "HTTP"
-      HealthCheckTimeoutSeconds: 5
-      HealthyThresholdCount: 3
       IpAddressType: "ipv4"
-      Matcher: 
-        HttpCode: "200-400"
       Name: "ProxyServerElbv2TargetGroup"
       Port: 3128
       Protocol: "TCP"
@@ -392,7 +383,7 @@ Resources:
           Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet2Id"
       - SubnetId:
           Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet3Id"
-      Type: "application"
+      Type: "network"
   
   ProxyServerElbv2Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
