--- a/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
@@ -263,7 +263,32 @@ Resources:
       RouteTableId: !Ref PrivateVpcRouteTable
       VpcPeeringConnectionId: !Ref InterVpcPeeringConnection
 
+#######################################################################################################################
+###                                                                                                                 ###
+###                                                 COMMON RESOURCES                                                ###
+###                                                                                                                 ###
+#######################################################################################################################
+
+  # This can be used in various Security Group rules
+  InterVpcHostsPrefixList:
+    Type: AWS::EC2::PrefixList
+    Properties: 
+      AddressFamily: "IPv4"
+      Entries: 
+        - Cidr: !GetAtt PublicVpc.CidrBlock
+          Description: "Public VPC CIDR"
+        - Cidr: !GetAtt PrivateVpc.CidrBlock
+          Description: "Private VPC CIDR"
+      MaxEntries: 3
+      PrefixListName: "InterVpcHostsPrefixList"
+
 Outputs:
+
+  InterVpcHostsPrefixListId:
+    Description: "InterVpcHostsPrefixList ID"
+    Value: !GetAtt InterVpcHostsPrefixList.PrefixListId
+    Export:
+      Name: !Sub "${AWS::StackName}-InterVpcHostsPrefixListId"
 
   PrivateVpcId:
     Description: "PrivateVpc ID"
