feature: provisioning of the github sync server resources

--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -238,7 +238,9 @@ Resources:
 
               yum install -y git python3 nfs-utils nfs4-acl-tools nfs-common
 
-              # TODO As a last step, terminate myself...
+              # TODO Retrieve the Python script from a remote resource
+
+              # TODO Define and Start the service - As a last step, terminate myself...
 
               --==BOUNDARY==--
             - ProxyServer:
