doc: added resources I consulted for setting up SSM for EC2 instances running in private only VPC

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "OLDPWD",
         "onboarded",
         "OPENZFS",
+        "patchmanager",
         "prepopulate",
         "Redrive",
         "RFID",
