fix: fixed import reference

--- a/labs/lab3-non-kinesis-example/cloudformation/4000_fsx_filesystem.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4000_fsx_filesystem.yaml
@@ -126,7 +126,7 @@ Resources:
       - !Ref StaticWebRootFsxFilesystemSecurityGroup
       StorageCapacity: 64
       SubnetIds: 
-      - Fn::ImportValue: !Sub "${VpcStackName}-PrivateVpcSubnet1"
+      - Fn::ImportValue: !Sub "${VpcStackName}-PrivateVpcSubnet1Id"
       Tags: 
       - Key: "ContainsPersonalInformation"
         Value: "FALSE"
