refactor: added NFS mount configuration for the GitHub Sync Server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "KEYPAIR",
         "localnet",
         "ncat",
+        "nfsvers",
         "nmap",
         "nosql",
         "OLDPWD",
