feature: started working on the python script for the GitHub sync server

--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -243,6 +243,8 @@ Resources:
 
               mkdir /data
               mount -t nfs -o nfsvers=4.1 ${OpenZfsDnsName}:/fsx/ /data
+              mkdir /data/github
+              chown ec2-user:ec2-user /data/github
 
               # TODO Retrieve the Python script from a remote resource
 
