feature: started working on the python script for the GitHub sync server

--- a/labs/lab3-non-kinesis-example/cloudformation/4000_fsx_filesystem.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4000_fsx_filesystem.yaml
@@ -118,6 +118,7 @@ Resources:
                 - rw
                 - crossmnt
                 - sync
+                - root_squash
           ReadOnly: false
           RecordSizeKiB: 16
         ThroughputCapacity: 64
