--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -250,7 +250,7 @@ Resources:
               mkdir /data
               mount -t nfs -o nfsvers=4.1 ${OpenZfsDnsName}:/fsx/ /data
               mkdir /data/github
-              chown ec2-user:ec2-user /data/github
+              chown ec2-user.ec2-user /data/github
 
               mkdir /home/ec2-user/script
               chown ec2-user:ec2-user /home/ec2-user/script
