--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "ecfdcb",
         "Elbv",
         "getenv",
+        "githubsync",
         "hashlib",
         "hexdigest",
         "Hostnames",
