--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "Hostnames",
         "kconvert",
         "KEYPAIR",
+        "levelname",
         "localnet",
         "ncat",
         "nfsvers",
