--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -36,6 +36,9 @@ Parameters:
   PythonScriptFile:
     Type: String
     Description: "The URL (Permalink) to the github_sync.py file" 
+  S3SourceBucketParam:
+    Type: String
+    Description: "The S3 bucket name containing the Lambda function ZIP file"
 
 # Rules:
 #   set of rules
@@ -86,6 +89,96 @@ Resources:
 ###                       Lambda Function to monitor and start EC2 Instance if Queue Count > 0                      ###
 ###                                                                                                                 ###
 #######################################################################################################################
+
+  GitHubWebhookLambdaFunctionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Sid: "GitHubWebhookLambdaFunctionRoleAssumeRolePolicyDocument"
+          Effect: "Allow"
+          Principal:
+            Service: "lambda.amazonaws.com"
+          Action: "sts:AssumeRole"
+      Description: "Lambda role GitHubWebhookLambdaFunction"
+      Policies:
+      - PolicyName: GitHubWebhookLambdaFunctionPolicy01
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: "Allow"
+            Action:
+            - "logs:CreateLogGroup"
+            - "logs:CreateLogStream"
+            - "logs:PutLogEvents"
+            Resource: arn:aws:logs:*:*:*
+      - PolicyName: GitHubWebhookLambdaFunctionPolicy02
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+            - "sqs:SendMessage"
+            Resource: !GetAtt GitHubSyncRequestQueue.Arn
+      RoleName: GitHubWebhookLambdaFunctionRole
+
+  GitHubWebhookLambdaFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    DeletionPolicy: Delete
+    UpdateReplacePolicy: Delete
+    Properties:
+      LogGroupName:
+        Fn::Sub:
+        -  "/aws/lambda/${functionRef}"
+        - functionRef: !Ref GitHubWebhookLambdaFunction
+      RetentionInDays: 7
+
+  GitHubWebhookLambdaFunction:
+    Type: AWS::Lambda::Function
+    Properties: 
+      Architectures: 
+      - "arm64"
+      Environment:
+        Variables: 
+          SQS_URL: !GetAtt GitHubSyncRequestQueue.QueueUrl
+      Code: 
+        S3Bucket: !Ref S3SourceBucketParam
+        S3Key: "github_webhook_lambda.zip"
+      Description: "Handle the test event and emit event data to AWS Kinesis"
+      FunctionName: "GitHubWebhookLambdaFunction"
+      Handler: "index.lambda_handler"
+      MemorySize: 128
+      Role: !GetAtt GitHubWebhookLambdaFunctionRole.Arn
+      Runtime: "python3.8"
+      Timeout: 30
+
+  GitHubWebhookLambdaFunctionUrl:
+    Type: AWS::Lambda::Url
+    Properties: 
+      AuthType: "NONE"
+      Cors: 
+        AllowCredentials: true
+        AllowHeaders: 
+        - "Content-Type"
+        - "X-Amz-Date"
+        - "Authorization"
+        - "X-Api-Key"
+        - "X-Amz-Security-Token"
+        AllowMethods: 
+        - GET
+        - POST
+        - PUT
+        AllowOrigins: 
+        - "http://localhost"
+        - "http://localhost:9000"
+        - "https://www.github.com"
+        ExposeHeaders: 
+        - "Date"
+        - "x-api-id"
+        MaxAge: 86400
+      Qualifier: "githbu-webhook"
+      TargetFunctionArn: !GetAtt GitHubWebhookLambdaFunction.Arn
 
 
 #######################################################################################################################
